--- a/CSS/CSS样式表.html
+++ b/CSS/CSS样式表.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>CSS样式表</title>
 
+    <link rel="stylesheet" type="text/css" href="styles/mystyle.css">
+
     <style type="text/css">
         /*类派生选择器*/
         .fancy td {
@@ -77,5 +79,7 @@
     <input type="text" name="username" value="Bill" size="20">
     <input type="button" value="Example Button">
 </form>
+
+
 </body>
 </html>
